# qq

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  flake.nix
.helix/: languages.toml
.qq/: config.ron  tui.ron
crates/qq-core/: Cargo.toml  README.md
crates/qq-core/src/: lib.rs  sessions.rs
crates/qq-protocol/: Cargo.toml  README.md
crates/qq-protocol/src/: ids.rs  lib.rs  sessions.rs
crates/qq-provider/: Cargo.toml  README.md
crates/qq-provider/benches/: provider_compiler.rs
crates/qq-provider/src/: anthropic.rs  bedrock.rs  compiler.rs  google.rs  http.rs  lib.rs  limits.rs  mantle.rs  openai.rs  openai_chat.rs  request_auth.rs  sanitize.rs  sse.rs
crates/qq-tui/: Cargo.toml  README.md  build.rs
crates/qq-tui/examples/: tui_prototype.rs
crates/qq-tui/src/: app.rs  client.rs  lib.rs  settings.rs  terminal.rs  view.rs
docs/: architecture.md  design.md  provider-validation.md  tool-execution.md
nix/: dev-shells.nix  overlay.nix  packages.nix
src/: auth.rs  catalog.rs  cli.rs  client.rs  config.rs  main.rs  models.rs  output.rs  providers.rs  runtime.rs  server.rs
src/auth/: codex.rs  tests.rs  xai.rs
src/config/: document.rs  loader.rs  managed.rs  remote.rs  tests.rs  tui.rs
xtask/: Cargo.toml  README.md
