[package]
name = "qq-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util.workspace = true
pulldown-cmark = "0.13"
qq-protocol.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std"] }
unicode-width = "0.2"

[dev-dependencies]

[[example]]
name = "tui_prototype"
path = "examples/tui_prototype.rs"
test = true
